# smartwin_devices

./: .gitignore  CMakeLists.txt  README.md
include/: smartwin_cmd.h  smartwin_comm.h  smartwin_def.h  smartwin_dev_interface.h  smartwin_devices.h
src/: smartwin_comm.cpp  smartwin_dev_interface.cpp  smartwin_devices.cpp
test/: future_test.cpp  smartwin_test.cpp
